--- a/Biblioteca/nbproject/project.properties
+++ b/Biblioteca/nbproject/project.properties
@@ -67,7 +67,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=Biblioteca
-main.class=visao.TelaPrincipal
+main.class=visao.TelaLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
