--- a/Biblioteca/nbproject/project.properties
+++ b/Biblioteca/nbproject/project.properties
@@ -36,7 +36,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -68,7 +69,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=Biblioteca
-main.class=visao.TelaLogin
+main.class=visao.TelaInicial
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
