--- a/Biblioteca/nbproject/project.properties
+++ b/Biblioteca/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.jar=${dist.dir}/Biblioteca.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.5.13.2.jar=..\\..\\itextpdf-5.5.13.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.itextpdf-5.5.13.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
