--- a/Biblioteca/nbproject/project.properties
+++ b/Biblioteca/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.5.13.2.jar=..\\..\\itextpdf-5.5.13.2.jar
+file.reference.itextpdf-5.5.13.2.jar-1=C:\\Users\\Leo\\Downloads\\itextpdf-5.5.13.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.itextpdf-5.5.13.2.jar}
+    ${file.reference.itextpdf-5.5.13.2.jar}:\
+    ${file.reference.itextpdf-5.5.13.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -52,7 +54,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.itextpdf-5.5.13.2.jar-1}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
