--- a/Biblioteca/nbproject/private/private.properties
+++ b/Biblioteca/nbproject/private/private.properties
@@ -2,6 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.itextpdf-5.5.13.2.jar=C:\\Users\\Leo\\Downloads\\itextpdf-5.5.13.2.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
